@@ -1,5 +1,16 @@
 2009-10-27  Geoffrey Garen  <ggaren@apple.com>
 
+        Build fix: re-readded this file.
+
+        * runtime/DateInstanceCache.h: Added.
+        (JSC::DateInstanceData::create):
+        (JSC::DateInstanceData::DateInstanceData):
+        (JSC::DateInstanceCache::DateInstanceCache):
+        (JSC::DateInstanceCache::add):
+        (JSC::DateInstanceCache::lookup):
+
+2009-10-27  Geoffrey Garen  <ggaren@apple.com>
+
         Reviewed by Darin Adler and Oliver Hunt.
 
         https://bugs.webkit.org/show_bug.cgi?id=30800
